# EssentialsOfStochasticProcesses

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: checks.yml
essentials_stochastics_processes/: main.py
exercises/1_markov_chains/: 01_understanding_the_definitions.ipynb  02_two_state_markov_chains.ipynb  03_chains_with_three_or_more_states.ipynb  04_more_theoretical_exercises.ipynb  05_exit_distributions_and_times.ipynb  06_infinite_state_space.ipynb
exercises/2_poisson_processes/: 01_exponential_distribution.ipynb  02_poisson_approximation_to_binomial.ipynb  03_poisson_processes_basic_properties.ipynb  04_random_sums.ipynb  05_thinning_and_conditioning.ipynb
exercises/3_renewal_processes/: 01_renewal_processes.ipynb  02_age_and_residual_life.ipynb
exercises/4_continuous_time_markov_chain/: 01_exercises.ipynb  02_detailed_balance.ipynb  02_hitting_times_and_exit_distributions.ipynb  03_markovian_queues_finite_state_space.ipynb  04_markovian_queues_infinite_state_space.ipynb  05_queuing_networks.ipynb  1_continues_time_markov_chains.ipynb
exercises/5_martingales/: 01_martingales.ipynb
exercises/6_mathematical_finance/: 01_mathematical_finance.ipynb
explained/: 01_stationary_distribution.ipynb
libs/: np_latex.py  stationary_distribution.py
tests/: conftest.py
