[tool.poetry]
name = "essentials_stochastics_processes"
version = "0.1.0"
description = "Solutions and simulations from the Essentials of Stochastic Processes by Richard Durrett"
authors = ["Matej Kerekrety <matej.kerekrety@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.0.1"
black = "^22.1.0"
mypy = "^0.931"
bandit = "^1.7.3"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"



[tool.black]
line-length = 120

